--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,15 @@ input {
 select {
   @apply outline-none border border-gray-300 w-full h-10 my-1;
 }
+
+.artCard {
+  height: 34rem;
+}
+.artCard img {
+  transition: all 0.4s;
+  transform-origin: center;
+  transform: scale(1) translate(-50%, -50%);
+}
+.artCard:hover img {
+  transform: scale(1.04) translate(-50%, -50%);
+}
