--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,10 @@ select {
   height: 34rem;
 }
 .artCard img {
-  transition: all 0.4s;
-  transform-origin: center;
-  transform: scale(1) translate(-50%, -50%);
+  transition: all 0.5s;
+  /* transform-origin: center; */
+  transform: scale(1);
 }
 .artCard:hover img {
-  transform: scale(1.04) translate(-50%, -50%);
+  transform: scale(1.07);
 }
