--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   @apply flex items-center flex-col;
+  background-color: #e1e1e1;
 }
 
 #root {
-  @apply w-full max-w-screen-2xl;
+  @apply w-full;
 }
 
 code {
@@ -27,7 +28,7 @@ select {
 }
 
 .artCard {
-  height: 34rem;
+  height: 22rem;
 }
 .artCard img {
   transition: all 0.5s;
