--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ select {
 
 .artCard {
   transition: all 0.5s;
-  height: 22rem;
+  max-height: 22rem;
   /* background-color: #fff; */
 }
 .artCard img {
