--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   @apply flex items-center flex-col;
-  background-color: #fff;
+  background-color: #f0f0f0;
 }
 
 #root {
@@ -23,7 +23,7 @@ input {
   @apply p-4 outline-none border border-gray-300 my-1;
 }
 textarea {
-  @apply p-4 outline-none border border-gray-300 my-1;
+  @apply p-4 outline-none border border-gray-300 my-1 h-32 max-h-32;
 }
 
 select {
@@ -49,7 +49,11 @@ select {
 
 header nav a.active {
   color: #5a9a1e;
-  transform: scale(1.1);
+  transform: scale(1.05);
   font-weight: 700;
-  /* text-decoration: underline; */
+  text-decoration: underline;
+}
+
+#fvArtStyle {
+  display: none;
 }
