--- a/src/index.css
+++ b/src/index.css
@@ -30,28 +30,101 @@ select {
   @apply outline-none border border-gray-300 w-full h-10 my-1;
 }
 
+header {
+  padding: 1rem 0;
+}
+
+.content {
+  padding-top: 3rem;
+}
+
 .artCard {
+  position: relative;
   transition: all 0.5s;
-  max-height: 23rem;
+  width: 100%;
+  /* max-height: 18rem; */
   /* background-color: #fff; */
 }
-.artCard img {
+
+.artCard::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 5;
+  height: 8rem;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(0, 0, 0, 0.2749693627450981) 26%,
+    rgba(0, 0, 0, 0.5186668417366946) 50%,
+    rgba(0, 0, 0, 0.61390493697479) 78%,
+    rgba(0, 0, 0, 0.6839329481792717) 100%
+  );
+}
+.img-area {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+}
+.img-area .artimg {
+  width: 100%;
+  height: 27rem;
+  background-position: center;
+  display: inline-block;
+  background-size: cover;
+}
+.art-info {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* height: rem; */
+  z-index: 10;
+  text-align: left;
+  padding: 3rem 0.8rem 0.8rem;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(0, 0, 0, 0.2749693627450981) 26%,
+    rgba(0, 0, 0, 0.5186668417366946) 50%,
+    rgba(0, 0, 0, 0.61390493697479) 78%,
+    rgba(0, 0, 0, 0.6839329481792717) 100%
+  );
+  color: #fff;
+}
+.art-info h3 {
+  color: #cacac2;
+}
+.art-info p,
+.art-info span {
+  color: #959595;
+}
+.art-info .artist {
+  color: #959595;
+}
+
+.art-info .liked em {
+  color: #959595;
+}
+
+.img-area .artimg {
   transition: all 0.5s;
-  /* transform-origin: center; */
   transform: scale(1);
 }
-.artwork-img {
-  max-height: 80vh;
-}
-.artCard:hover img {
+.img-area:hover .artimg {
   transform: scale(1.07);
 }
 
 header nav a.active {
   color: #5a9a1e;
   transform: scale(1.05);
-  font-weight: 700;
-  text-decoration: underline;
+  font-weight: 600;
+  /* text-decoration: underline; */
 }
 
 #fvArtStyle {
@@ -68,10 +141,11 @@ header nav a.active {
   border-radius: 100rem;
   font-style: normal;
   margin-right: 0.4rem;
-  color: #fff;
+  font-weight: 500;
+  color: #9b9b9b;
 }
 .level_1 {
-  background-color: rgb(187, 187, 187);
+  background-color: #393939;
 }
 .lnb-btn {
   display: none;
@@ -113,7 +187,7 @@ header nav a.active {
 
   header .lnb-btn {
     position: absolute;
-    top: 1.1rem;
+    top: 1.7rem;
     right: 3rem;
     z-index: 50;
   }
@@ -145,5 +219,13 @@ header nav a.active {
   }
   header .open .lnb-btn::after {
     transform: rotate(-45deg) translate(12%, -50%);
+  }
+
+  .img-area .artimg {
+    height: 20rem;
+  }
+
+  .img-area:hover .artimg {
+    transform: scale(1);
   }
 }
