--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ header {
   justify-content: center;
   background-color: #000;
 }
+
 .img-area .artimg {
   width: 100%;
   height: 29rem;
@@ -122,6 +123,42 @@ header {
 }
 .img-area:hover .artimg {
   transform: scale(1.07);
+}
+
+.imgBox {
+  position: relative;
+  width: auto;
+  max-height: 50rem;
+}
+.imgBox img {
+  width: 100%;
+  max-height: 50rem;
+}
+
+.watermark {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0.7rem 0;
+  font-size: 1.1rem;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #d7d7d7;
+  font-weight: 600;
+}
+
+.reply-list {
+  margin-top: 2rem;
+}
+.reply-list ul {
+}
+.reply-list li {
+  word-break: break-all;
+  border-bottom: 1px solid #d1d5db;
+  padding: 1rem 0;
+}
+.reply-list li span {
+  color: #555;
 }
 
 header nav a.active {
@@ -231,5 +268,24 @@ header nav a.active {
 
   .img-area:hover .artimg {
     transform: scale(1);
+  }
+
+  .reply-wrap form {
+    flex-direction: column;
+  }
+  .reply-wrap textarea {
+    margin: 0;
+  }
+  .reply-wrap button {
+    margin-top: 1rem;
+    width: 100% !important;
+    text-align: center !important;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    height: 3rem !important;
+  }
+  .reply-wrap .nickname {
+    max-width: 250px;
   }
 }
